--- a/src/main.ipynb
+++ b/src/main.ipynb
@@ -2,20 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "initial_id",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-01-27T22:10:17.882481600Z",
-     "start_time": "2024-01-27T22:10:17.873925800Z"
+     "end_time": "2024-01-28T21:37:48.892513300Z",
+     "start_time": "2024-01-28T21:37:48.861161600Z"
     }
    },
    "outputs": [],
    "source": [
-    "from sklearn.model_selection import StratifiedShuffleSplit\n",
     "import pandas as pd\n",
-    "import numpy as np\n",
     "import os\n",
+    "from sklearn.model_selection import StratifiedShuffleSplit\n",
     "from config import *"
    ]
   },
@@ -23,57 +22,56 @@
    "cell_type": "code",
    "outputs": [],
    "source": [
-    "#Dataframe for all data in \"train\" folder\n",
-    "train_test_dataframe = pd.DataFrame(columns=['IMG', 'CODE'])\n",
+    "entire_categories_df = pd.DataFrame(columns=['IMG', 'CODE'])\n",
     "\n",
-    "#Convert all data to csv files\n",
-    "def data_to_csv(category):\n",
-    "    category_dataframe = pd.DataFrame(columns=['IMG', 'CODE'])\n",
-    "    for img in os.listdir(f'data/train/{category}'):\n",
-    "        category_dataframe.loc[category_dataframe.shape[0]] = [img, CATEGORIES_CODES[category]]\n",
-    "        train_test_dataframe.loc[train_test_dataframe.shape[0]] = [img, CATEGORIES_CODES[category]]\n",
-    "        #category_dataframe.to_csv(f'data/processed/categories/{category}.csv') \n",
-    "\n",
+    "save_entire_df, save_categories_df = False, False\n",
     "for (categories, code) in CATEGORIES_CODES.items():\n",
-    "    data_to_csv(categories)\n",
+    "    category_df = pd.DataFrame(columns=['IMG', 'CODE'])\n",
+    "    for img in os.listdir(f'data/train/{categories}'):\n",
+    "        category_df.loc[category_df.shape[0]] = [img, code]\n",
+    "        entire_categories_df.loc[entire_categories_df.shape[0]] = [img, code]\n",
+    "        if save_categories_df:\n",
+    "            category_df.to_csv(f'data/processed/categories/{categories}.csv') \n",
     "\n",
-    "#train_test_dataframe.to_csv('data/processed/train_test_data.csv')"
+    "if save_entire_df:\n",
+    "    entire_categories_df.to_csv('data/processed/train_test_data.csv')"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-27T22:05:01.579302600Z",
-     "start_time": "2024-01-27T22:04:40.914080600Z"
+     "end_time": "2024-01-28T21:38:10.005780900Z",
+     "start_time": "2024-01-28T21:37:48.899295100Z"
     }
    },
    "id": "112bfa254252c6cd",
-   "execution_count": 2
+   "execution_count": 6
   },
   {
    "cell_type": "code",
    "outputs": [],
    "source": [
-    "#Splitting data between train and test sets\n",
     "train_set = pd.DataFrame()\n",
     "test_set = pd.DataFrame()\n",
+    "save_train_test_sets = False\n",
+    "\n",
     "split = StratifiedShuffleSplit(n_splits=1, test_size=0.05)\n",
-    "for train_dataframe, test_dataframe in split.split(train_test_dataframe, train_test_dataframe[[\"CODE\"]]):\n",
-    "    train_set = train_test_dataframe.loc[train_dataframe]\n",
-    "    test_set = train_test_dataframe.loc[test_dataframe]\n",
+    "for train_dataframe, test_dataframe in split.split(entire_categories_df, entire_categories_df[[\"CODE\"]]):\n",
+    "    train_set = entire_categories_df.loc[train_dataframe]\n",
+    "    test_set = entire_categories_df.loc[test_dataframe]\n",
     "    \n",
-    "#Saving train and test sets\n",
-    "# train_set.to_csv('data/processed/train_set.csv')\n",
-    "# test_set.to_csv('data/processed/test_set.csv')"
+    "if save_train_test_sets:\n",
+    "    train_set.to_csv('data/processed/train_set.csv')\n",
+    "    test_set.to_csv('data/processed/test_set.csv')"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-27T22:05:01.659855500Z",
-     "start_time": "2024-01-27T22:05:01.581743Z"
+     "end_time": "2024-01-28T21:38:10.052104500Z",
+     "start_time": "2024-01-28T21:38:10.007029Z"
     }
    },
    "id": "802815cd6a86d56e",
-   "execution_count": 3
+   "execution_count": 7
   },
   {
    "cell_type": "code",
@@ -83,7 +81,7 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "Index: 14629 entries, 8997 to 1957\n",
+      "Index: 14629 entries, 13400 to 14130\n",
       "Data columns (total 2 columns):\n",
       " #   Column  Non-Null Count  Dtype \n",
       "---  ------  --------------  ----- \n",
@@ -100,40 +98,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-27T22:05:01.671399400Z",
-     "start_time": "2024-01-27T22:05:01.662089700Z"
+     "end_time": "2024-01-28T21:38:10.062794600Z",
+     "start_time": "2024-01-28T21:38:10.052104500Z"
     }
    },
    "id": "8f7323682eac7c7d",
-   "execution_count": 4
-  },
-  {
-   "cell_type": "code",
-   "outputs": [],
-   "source": [
-    "prediction_dataframe = pd.DataFrame(columns=['filename', 'predicted_class'])\n",
-    "for img in os.listdir('data/test'):\n",
-    "    prediction_dataframe.loc[prediction_dataframe.shape[0]] = [img, 0]\n",
-    "prediction_dataframe.to_csv('data/result/predictions.csv')"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-01-27T22:22:42.791081500Z",
-     "start_time": "2024-01-27T22:22:39.425862900Z"
-    }
-   },
-   "id": "b299c9b3342f560d",
-   "execution_count": 10
-  },
-  {
-   "cell_type": "code",
-   "outputs": [],
-   "source": [],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "7854e9e766940fb9"
+   "execution_count": 8
   }
  ],
  "metadata": {
