--- a/src/model_predict.ipynb
+++ b/src/model_predict.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "initial_id",
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-01-28T18:48:31.642514300Z",
-     "start_time": "2024-01-28T18:48:27.726660700Z"
+     "end_time": "2024-01-28T21:30:57.403268700Z",
+     "start_time": "2024-01-28T21:30:50.105673Z"
     }
    },
    "outputs": [
@@ -16,7 +16,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "WARNING:tensorflow:From D:\\it\\ML\\IASA-Champ-24-stage1\\.venv\\Lib\\site-packages\\keras\\src\\losses.py:2976: The name tf.losses.sparse_softmax_cross_entropy is deprecated. Please use tf.compat.v1.losses.sparse_softmax_cross_entropy instead.\n"
+      "WARNING:tensorflow:From C:\\Users\\julia\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\keras\\src\\losses.py:2976: The name tf.losses.sparse_softmax_cross_entropy is deprecated. Please use tf.compat.v1.losses.sparse_softmax_cross_entropy instead.\n"
      ]
     }
    ],
@@ -27,14 +27,9 @@
     "import numpy as np\n",
     "import cv2\n",
     "import matplotlib.pyplot as plt \n",
+    "from config import *\n",
     "\n",
-    "CATEGORIES_REV = {\n",
-    "    0: 'alert', 1: 'button', 2: 'card', 3:'checkbox_checked',\n",
-    "    4: 'checkbox_unchecked', 5: 'chip', 6: 'data_table', 7:'dropdown_menu',\n",
-    "    8: 'floating_action_button', 9: 'grid_list', 10: 'image', 11: 'label', 12: 'menu',\n",
-    "    13: 'radio_button_checked', 14: 'radio_button_unchecked', 15: 'slider', 16: 'switch_disabled',\n",
-    "    17: 'switch_enabled', 18: 'text_area', 19: 'text_field', 20: 'tooltip'\n",
-    "}"
+    "CATEGORIES_REVERSE = {v: k for k, v in CATEGORIES_CODES.items()}"
    ]
   },
   {
@@ -44,50 +39,38 @@
     "class PredictWithModel:\n",
     "    shape = (224, 224, 1)\n",
     "    \n",
-    "    def __init__(self, _model_path: str, _test_dir: str='data/test') -> None:\n",
-    "        self.model = load_model(_model_path)\n",
-    "        \n",
-    "        self.paths = os.listdir(_test_dir)\n",
-    "        self.images = np.empty((_s:=len(self.paths), ) + self.shape, dtype='float16')\n",
-    "        \n",
-    "        self.test_dir = _test_dir\n",
-    "        self.predictions = pd.DataFrame(columns=['ID', 'Target'])\n",
-    "        \n",
-    "        self.__index, self.size = 0, _s \n",
+    "    def __init__(self, version: str) -> None:\n",
+    "        self.test_img_path = 'data/test'\n",
+    "        self.model = load_model(f'models/model_v{version}.h5')\n",
+    "        self.path = os.listdir(self.test_img_path)\n",
+    "        self.images = np.empty((_s:=len(self.path), ) + self.shape, dtype='float16')\n",
+    "        self.predictions = pd.DataFrame(columns=['ID', 'CATEGORY'])\n",
     "    \n",
-    "    def test_img_from_dir(self) -> None:\n",
-    "        for img_path in self.paths:\n",
-    "            self.images[self.__index] = self._parse_img(img_path)\n",
-    "            self.__index += 1\n",
-    "            \n",
-    "            #print(f\"[{self.__index}/{self.images.shape[0]}] {img_path}\")\n",
-    "            \n",
-    "    @staticmethod\n",
-    "    def show(img: np.array) -> None:\n",
-    "        plt.imshow(img[0], cmap='gray')\n",
-    "    \n",
-    "    def _parse_img(self, _img_path: str) -> np.array:\n",
-    "        img = ~cv2.imread(f\"{self.test_dir}/{_img_path}\", 0) / 255\n",
-    "        \n",
+    "    def parse_img(self, img_path: str) -> np.array:\n",
+    "        img = ~cv2.imread(f\"{self.test_img_path}/{img_path}\", 0) / 255\n",
     "        return np.asarray(img, dtype='float16').reshape(self.shape)\n",
     "    \n",
     "    def predict_img(self):\n",
-    "        self.test_img_from_dir()\n",
-    "        \n",
+    "        for i, img_path in enumerate(self.path):\n",
+    "            self.images[i] = self.parse_img(img_path)\n",
+    "            \n",
     "        for i, p in enumerate(self.model.predict(self.images)):\n",
-    "            self.predictions.loc[i] = [self.paths[i], CATEGORIES_REV[np.argmax(p)]]\n",
-    "        \n",
-    "        self.predictions.to_csv('data/result/predictions.csv', index=False)\n"
+    "            self.predictions.loc[i] = [self.path[i], CATEGORIES_REVERSE[np.argmax(p)]]\n",
+    "        self.predictions.to_csv('data/result/predictions.csv')\n",
+    "            \n",
+    "    @staticmethod\n",
+    "    def show(img: np.array) -> None:\n",
+    "        plt.imshow(img[0], cmap='gray')\n"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-28T18:48:33.303583600Z",
-     "start_time": "2024-01-28T18:48:33.299735900Z"
+     "end_time": "2024-01-28T21:30:57.411099Z",
+     "start_time": "2024-01-28T21:30:57.406429700Z"
     }
    },
    "id": "4c51dfa17ac8ac81",
-   "execution_count": 4
+   "execution_count": 3
   },
   {
    "cell_type": "code",
@@ -96,35 +79,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "WARNING:tensorflow:From D:\\it\\ML\\IASA-Champ-24-stage1\\.venv\\Lib\\site-packages\\keras\\src\\backend.py:1398: The name tf.executing_eagerly_outside_functions is deprecated. Please use tf.compat.v1.executing_eagerly_outside_functions instead.\n",
-      "WARNING:tensorflow:From D:\\it\\ML\\IASA-Champ-24-stage1\\.venv\\Lib\\site-packages\\keras\\src\\layers\\pooling\\max_pooling2d.py:161: The name tf.nn.max_pool is deprecated. Please use tf.nn.max_pool2d instead.\n",
-      "161/161 [==============================] - 9s 56ms/step\n"
+      "WARNING:tensorflow:From C:\\Users\\julia\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\keras\\src\\backend.py:1398: The name tf.executing_eagerly_outside_functions is deprecated. Please use tf.compat.v1.executing_eagerly_outside_functions instead.\n",
+      "WARNING:tensorflow:From C:\\Users\\julia\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\keras\\src\\layers\\pooling\\max_pooling2d.py:161: The name tf.nn.max_pool is deprecated. Please use tf.nn.max_pool2d instead.\n",
+      "161/161 [==============================] - 46s 283ms/step\n"
      ]
     }
    ],
    "source": [
-    "pwm = PredictWithModel('models/model_v0.2.2.h5')\n",
-    "\n",
-    "pwm.predict_img()"
+    "model_version = '0.1'\n",
+    "predict = PredictWithModel(model_version)\n",
+    "predict.predict_img()"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-28T18:48:52.993048600Z",
-     "start_time": "2024-01-28T18:48:35.330995700Z"
+     "end_time": "2024-01-28T21:32:39.318044800Z",
+     "start_time": "2024-01-28T21:31:37.355979900Z"
     }
    },
    "id": "ac464e1248428e5f",
    "execution_count": 5
-  },
-  {
-   "cell_type": "code",
-   "outputs": [],
-   "source": [],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "765a72199c04fbb7"
   }
  ],
  "metadata": {
