--- a/src/model_predict.ipynb
+++ b/src/model_predict.ipynb
@@ -7,19 +7,11 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-01-28T21:30:57.403268700Z",
-     "start_time": "2024-01-28T21:30:50.105673Z"
+     "end_time": "2024-01-29T15:18:35.293544Z",
+     "start_time": "2024-01-29T15:18:35.285815100Z"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "WARNING:tensorflow:From C:\\Users\\julia\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\keras\\src\\losses.py:2976: The name tf.losses.sparse_softmax_cross_entropy is deprecated. Please use tf.compat.v1.losses.sparse_softmax_cross_entropy instead.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from tensorflow.keras.models import load_model\n",
     "import os\n",
@@ -44,7 +36,7 @@
     "        self.model = load_model(f'models/model_v{version}.h5')\n",
     "        self.path = os.listdir(self.test_img_path)\n",
     "        self.images = np.empty((_s:=len(self.path), ) + self.shape, dtype='float16')\n",
-    "        self.predictions = pd.DataFrame(columns=['ID', 'CATEGORY'])\n",
+    "        self.predictions = pd.DataFrame(columns=['ID', 'Target'])\n",
     "    \n",
     "    def parse_img(self, img_path: str) -> np.array:\n",
     "        img = ~cv2.imread(f\"{self.test_img_path}/{img_path}\", 0) / 255\n",
@@ -56,7 +48,7 @@
     "            \n",
     "        for i, p in enumerate(self.model.predict(self.images)):\n",
     "            self.predictions.loc[i] = [self.path[i], CATEGORIES_REVERSE[np.argmax(p)]]\n",
-    "        self.predictions.to_csv('data/result/predictions.csv')\n",
+    "        self.predictions.to_csv('data/result/predictions.csv', index=False)\n",
     "            \n",
     "    @staticmethod\n",
     "    def show(img: np.array) -> None:\n",
@@ -65,12 +57,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-28T21:30:57.411099Z",
-     "start_time": "2024-01-28T21:30:57.406429700Z"
+     "end_time": "2024-01-29T15:22:40.940808900Z",
+     "start_time": "2024-01-29T15:22:40.931356400Z"
     }
    },
    "id": "4c51dfa17ac8ac81",
-   "execution_count": 3
+   "execution_count": 7
   },
   {
    "cell_type": "code",
@@ -79,26 +71,33 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "WARNING:tensorflow:From C:\\Users\\julia\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\keras\\src\\backend.py:1398: The name tf.executing_eagerly_outside_functions is deprecated. Please use tf.compat.v1.executing_eagerly_outside_functions instead.\n",
-      "WARNING:tensorflow:From C:\\Users\\julia\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\keras\\src\\layers\\pooling\\max_pooling2d.py:161: The name tf.nn.max_pool is deprecated. Please use tf.nn.max_pool2d instead.\n",
-      "161/161 [==============================] - 46s 283ms/step\n"
+      "161/161 [==============================] - 19s 116ms/step\n"
      ]
     }
    ],
    "source": [
-    "model_version = '0.1'\n",
+    "model_version = '0.1.1'\n",
     "predict = PredictWithModel(model_version)\n",
     "predict.predict_img()"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-28T21:32:39.318044800Z",
-     "start_time": "2024-01-28T21:31:37.355979900Z"
+     "end_time": "2024-01-29T15:23:06.366218300Z",
+     "start_time": "2024-01-29T15:22:41.696007600Z"
     }
    },
    "id": "ac464e1248428e5f",
-   "execution_count": 5
+   "execution_count": 8
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "824641a311a19dd"
   }
  ],
  "metadata": {
