--- a/src/main.ipynb
+++ b/src/main.ipynb
@@ -2,21 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "initial_id",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-01-28T21:37:48.892513300Z",
-     "start_time": "2024-01-28T21:37:48.861161600Z"
-    }
-   },
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import os\n",
     "from sklearn.model_selection import StratifiedShuffleSplit\n",
     "from config import *"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "start_time": "2024-01-29T22:02:24.741001500Z"
+    }
+   },
+   "id": "initial_id",
+   "execution_count": 0
   },
   {
    "cell_type": "code",
