--- a/src/model_predict.ipynb
+++ b/src/model_predict.ipynb
@@ -2,16 +2,24 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "initial_id",
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-01-29T15:18:35.293544Z",
-     "start_time": "2024-01-29T15:18:35.285815100Z"
+     "end_time": "2024-01-30T01:26:28.676063600Z",
+     "start_time": "2024-01-30T01:26:19.427077100Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:From D:\\it\\ML\\IASA-Champ-24-stage1\\.venv\\Lib\\site-packages\\keras\\src\\losses.py:2976: The name tf.losses.sparse_softmax_cross_entropy is deprecated. Please use tf.compat.v1.losses.sparse_softmax_cross_entropy instead.\n"
+     ]
+    }
+   ],
    "source": [
     "from tensorflow.keras.models import load_model\n",
     "import os\n",
@@ -57,12 +65,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-29T15:22:40.940808900Z",
-     "start_time": "2024-01-29T15:22:40.931356400Z"
+     "end_time": "2024-01-30T01:26:29.477798300Z",
+     "start_time": "2024-01-30T01:26:29.445401700Z"
     }
    },
    "id": "4c51dfa17ac8ac81",
-   "execution_count": 7
+   "execution_count": 4
   },
   {
    "cell_type": "code",
@@ -71,24 +79,35 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "161/161 [==============================] - 19s 116ms/step\n"
+      "WARNING:tensorflow:From D:\\it\\ML\\IASA-Champ-24-stage1\\.venv\\Lib\\site-packages\\keras\\src\\backend.py:1398: The name tf.executing_eagerly_outside_functions is deprecated. Please use tf.compat.v1.executing_eagerly_outside_functions instead.\n",
+      "WARNING:tensorflow:From D:\\it\\ML\\IASA-Champ-24-stage1\\.venv\\Lib\\site-packages\\keras\\src\\layers\\pooling\\max_pooling2d.py:161: The name tf.nn.max_pool is deprecated. Please use tf.nn.max_pool2d instead.\n",
+      "161/161 [==============================] - 13s 80ms/step\n"
      ]
     }
    ],
    "source": [
-    "model_version = '0.2'\n",
+    "model_version = '0.1.5'\n",
     "predict = PredictWithModel(model_version)\n",
     "predict.predict_img()"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-29T15:23:06.366218300Z",
-     "start_time": "2024-01-29T15:22:41.696007600Z"
+     "end_time": "2024-01-30T01:27:15.894892100Z",
+     "start_time": "2024-01-30T01:26:30.586884400Z"
     }
    },
    "id": "ac464e1248428e5f",
-   "execution_count": 8
+   "execution_count": 5
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "119951f39fb9b078"
   }
  ],
  "metadata": {
