--- a/src/model_predict.ipynb
+++ b/src/model_predict.ipynb
@@ -28,19 +28,18 @@
    "source": [
     "class PredictWithModel:\n",
     "    shape = (224, 224, 1)\n",
-    "    test_folder_path = 'data/test'\n",
     "    \n",
     "    def __init__(self, version: str) -> None:\n",
     "        self.model_version = version\n",
     "        self.model = load_model(f'models/model_v{version}.h5')\n",
     "        \n",
-    "        self.path = os.listdir(self.test_folder_path)\n",
+    "        self.path = os.listdir(test_folder_path)\n",
     "        self.images = np.empty((_s:=len(self.path), ) + self.shape, dtype='float16')\n",
     "        \n",
     "        self.predictions = pd.DataFrame(columns=['ID', 'Target'])\n",
     "    \n",
     "    def parse_img(self, img_path: str) -> np.array:\n",
-    "        image = ~cv2.imread(f\"{self.test_folder_path}/{img_path}\", 0)/255\n",
+    "        image = ~cv2.imread(f\"{test_folder_path}/{img_path}\", 0)/255\n",
     "        return np.asarray(image, dtype='float16').reshape(self.shape)\n",
     "    \n",
     "    def img_predict(self):\n",
@@ -55,6 +54,7 @@
     "            \n",
     "    def save(self):\n",
     "        self.predictions.to_csv(f'data/result/predictions_{self.model_version}.csv', index=False)\n",
+    "        print(f\"[+] Save predictions_{self.model_version}.csv\")\n",
     "\n",
     "    def img_predict_show(self, index: int) -> None:\n",
     "        plt.title(f\"Prediction: {self.predictions['Target'][index]}\")\n",
