--- a/src/model_predict.ipynb
+++ b/src/model_predict.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "initial_id",
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-01-30T01:26:28.676063600Z",
-     "start_time": "2024-01-30T01:26:19.427077100Z"
+     "end_time": "2024-02-01T09:53:11.603819800Z",
+     "start_time": "2024-02-01T09:53:06.973925100Z"
     }
    },
    "outputs": [
@@ -65,12 +65,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-30T01:26:29.477798300Z",
-     "start_time": "2024-01-30T01:26:29.445401700Z"
+     "end_time": "2024-02-01T09:53:15.983831600Z",
+     "start_time": "2024-02-01T09:53:15.973239500Z"
     }
    },
    "id": "4c51dfa17ac8ac81",
-   "execution_count": 4
+   "execution_count": 2
   },
   {
    "cell_type": "code",
@@ -79,35 +79,40 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "WARNING:tensorflow:From D:\\it\\ML\\IASA-Champ-24-stage1\\.venv\\Lib\\site-packages\\keras\\src\\backend.py:1398: The name tf.executing_eagerly_outside_functions is deprecated. Please use tf.compat.v1.executing_eagerly_outside_functions instead.\n",
-      "WARNING:tensorflow:From D:\\it\\ML\\IASA-Champ-24-stage1\\.venv\\Lib\\site-packages\\keras\\src\\layers\\pooling\\max_pooling2d.py:161: The name tf.nn.max_pool is deprecated. Please use tf.nn.max_pool2d instead.\n",
-      "161/161 [==============================] - 13s 80ms/step\n"
+      "161/161 [==============================] - 11s 65ms/step\n"
      ]
     }
    ],
    "source": [
-    "model_version = '0.1.5'\n",
+    "#model_version = '0.1.19' #78.9\n",
+    "#model_version = '0.2.1' #80.2\n",
+    "model_version = '0.2.2'\n",
     "predict = PredictWithModel(model_version)\n",
     "predict.predict_img()"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-30T01:27:15.894892100Z",
-     "start_time": "2024-01-30T01:26:30.586884400Z"
+     "end_time": "2024-02-01T13:16:03.732835200Z",
+     "start_time": "2024-02-01T13:15:41.744996500Z"
     }
    },
    "id": "ac464e1248428e5f",
-   "execution_count": 5
+   "execution_count": 7
   },
   {
    "cell_type": "code",
    "outputs": [],
    "source": [],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-01-31T16:07:19.315436300Z",
+     "start_time": "2024-01-31T16:07:19.313165800Z"
+    }
    },
-   "id": "119951f39fb9b078"
+   "id": "6b3b3a2312c311fe",
+   "execution_count": 3
   }
  ],
  "metadata": {
