--- a/src/model_build.ipynb
+++ b/src/model_build.ipynb
@@ -2,24 +2,36 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "id": "5a818fe93f1a5730",
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-02-01T13:17:20.541437500Z",
-     "start_time": "2024-02-01T13:17:20.523261800Z"
+     "end_time": "2024-02-05T20:08:48.828895Z",
+     "start_time": "2024-02-05T20:08:48.691056500Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "module 'matplotlib' has no attribute 'get_data_path'",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[1;31mAttributeError\u001B[0m                            Traceback (most recent call last)",
+      "Cell \u001B[1;32mIn[4], line 2\u001B[0m\n\u001B[0;32m      1\u001B[0m \u001B[38;5;28;01mimport\u001B[39;00m \u001B[38;5;21;01mpandas\u001B[39;00m \u001B[38;5;28;01mas\u001B[39;00m \u001B[38;5;21;01mpd\u001B[39;00m\n\u001B[1;32m----> 2\u001B[0m \u001B[38;5;28;01mimport\u001B[39;00m \u001B[38;5;21;01mmatplotlib\u001B[39;00m\u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01mpyplot\u001B[39;00m \u001B[38;5;28;01mas\u001B[39;00m \u001B[38;5;21;01mplt\u001B[39;00m\n\u001B[0;32m      3\u001B[0m \u001B[38;5;28;01mimport\u001B[39;00m \u001B[38;5;21;01mcv2\u001B[39;00m\n\u001B[0;32m      4\u001B[0m \u001B[38;5;28;01mimport\u001B[39;00m \u001B[38;5;21;01mos\u001B[39;00m\n",
+      "File \u001B[1;32mD:\\it\\ML\\IASA-Champ-24-stage1\\.venv\\Lib\\site-packages\\matplotlib\\__init__.py:977\u001B[0m\n\u001B[0;32m    970\u001B[0m     \u001B[38;5;28;01mreturn\u001B[39;00m config\n\u001B[0;32m    973\u001B[0m \u001B[38;5;66;03m# When constructing the global instances, we need to perform certain updates\u001B[39;00m\n\u001B[0;32m    974\u001B[0m \u001B[38;5;66;03m# by explicitly calling the superclass (dict.update, dict.items) to avoid\u001B[39;00m\n\u001B[0;32m    975\u001B[0m \u001B[38;5;66;03m# triggering resolution of _auto_backend_sentinel.\u001B[39;00m\n\u001B[0;32m    976\u001B[0m rcParamsDefault \u001B[38;5;241m=\u001B[39m _rc_params_in_file(\n\u001B[1;32m--> 977\u001B[0m     \u001B[43mcbook\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43m_get_data_path\u001B[49m\u001B[43m(\u001B[49m\u001B[38;5;124;43m\"\u001B[39;49m\u001B[38;5;124;43mmatplotlibrc\u001B[39;49m\u001B[38;5;124;43m\"\u001B[39;49m\u001B[43m)\u001B[49m,\n\u001B[0;32m    978\u001B[0m     \u001B[38;5;66;03m# Strip leading comment.\u001B[39;00m\n\u001B[0;32m    979\u001B[0m     transform\u001B[38;5;241m=\u001B[39m\u001B[38;5;28;01mlambda\u001B[39;00m line: line[\u001B[38;5;241m1\u001B[39m:] \u001B[38;5;28;01mif\u001B[39;00m line\u001B[38;5;241m.\u001B[39mstartswith(\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124m#\u001B[39m\u001B[38;5;124m\"\u001B[39m) \u001B[38;5;28;01melse\u001B[39;00m line,\n\u001B[0;32m    980\u001B[0m     fail_on_error\u001B[38;5;241m=\u001B[39m\u001B[38;5;28;01mTrue\u001B[39;00m)\n\u001B[0;32m    981\u001B[0m \u001B[38;5;28mdict\u001B[39m\u001B[38;5;241m.\u001B[39mupdate(rcParamsDefault, rcsetup\u001B[38;5;241m.\u001B[39m_hardcoded_defaults)\n\u001B[0;32m    982\u001B[0m \u001B[38;5;66;03m# Normally, the default matplotlibrc file contains *no* entry for backend (the\u001B[39;00m\n\u001B[0;32m    983\u001B[0m \u001B[38;5;66;03m# corresponding line starts with ##, not #; we fill on _auto_backend_sentinel\u001B[39;00m\n\u001B[0;32m    984\u001B[0m \u001B[38;5;66;03m# in that case.  However, packagers can set a different default backend\u001B[39;00m\n\u001B[0;32m    985\u001B[0m \u001B[38;5;66;03m# (resulting in a normal `#backend: foo` line) in which case we should *not*\u001B[39;00m\n\u001B[0;32m    986\u001B[0m \u001B[38;5;66;03m# fill in _auto_backend_sentinel.\u001B[39;00m\n",
+      "File \u001B[1;32mD:\\it\\ML\\IASA-Champ-24-stage1\\.venv\\Lib\\site-packages\\matplotlib\\cbook.py:545\u001B[0m, in \u001B[0;36m_get_data_path\u001B[1;34m(*args)\u001B[0m\n\u001B[0;32m    539\u001B[0m \u001B[38;5;28;01mdef\u001B[39;00m \u001B[38;5;21m_get_data_path\u001B[39m(\u001B[38;5;241m*\u001B[39margs):\n\u001B[0;32m    540\u001B[0m \u001B[38;5;250m    \u001B[39m\u001B[38;5;124;03m\"\"\"\u001B[39;00m\n\u001B[0;32m    541\u001B[0m \u001B[38;5;124;03m    Return the `pathlib.Path` to a resource file provided by Matplotlib.\u001B[39;00m\n\u001B[0;32m    542\u001B[0m \n\u001B[0;32m    543\u001B[0m \u001B[38;5;124;03m    ``*args`` specify a path relative to the base data path.\u001B[39;00m\n\u001B[0;32m    544\u001B[0m \u001B[38;5;124;03m    \"\"\"\u001B[39;00m\n\u001B[1;32m--> 545\u001B[0m     \u001B[38;5;28;01mreturn\u001B[39;00m Path(\u001B[43mmatplotlib\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mget_data_path\u001B[49m(), \u001B[38;5;241m*\u001B[39margs)\n",
+      "\u001B[1;31mAttributeError\u001B[0m: module 'matplotlib' has no attribute 'get_data_path'"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
-    "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import cv2\n",
     "import os\n",
-    "from skimage import morphology, img_as_float\n",
-    "from skimage.morphology import disk\n",
+    "\n",
     "from tensorflow.keras.utils import to_categorical\n",
     "from tensorflow.keras import layers, models\n",
     "from tensorflow.keras.models import load_model\n",
@@ -35,8 +47,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-02-01T10:00:39.604971200Z",
-     "start_time": "2024-02-01T10:00:39.593111700Z"
+     "end_time": "2024-02-02T20:53:58.878967900Z",
+     "start_time": "2024-02-02T20:53:58.867971300Z"
     }
    },
    "outputs": [],
@@ -80,13 +92,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "b90c8c5036cb556",
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-02-01T10:00:48.179949700Z",
-     "start_time": "2024-02-01T10:00:40.498172400Z"
+     "end_time": "2024-02-02T20:55:46.402299600Z",
+     "start_time": "2024-02-02T20:55:14.271324100Z"
     }
    },
    "outputs": [
@@ -103,7 +115,7 @@
       "text/plain": "   Unnamed: 0                                       IMG  CODE\n0       14603  cd68269b-5a76-4eef-b66e-be4c6c1680ed.jpg    19\n1       12346  a4c682c3-371c-4682-9008-37dbef03f020.jpg    16\n2       12501  dc13f24f-8ab7-4d6e-b380-e6bd248343d4.jpg    16\n3       13207  e1fa69ca-b9cf-4295-95b9-8ad565f1c02e.jpg    17\n4        5170  a2214eb7-6b55-4545-8475-20d4d40475d4.jpg     6\n5       15244  c32cf25e-32c9-494b-845b-9f1a7d1171e3.jpg    20\n6        6495  97ac3076-e505-4169-9b17-2994c12a03cb.jpg     8\n7        9512  8f044a0e-8922-4abe-af5b-e66fec843d04.jpg    12\n8        5913  bc8ae91f-c716-49a2-b61b-d7a7b52e3738.jpg     7\n9       14551  ba3081e9-f323-4746-a55f-2b17b7c78bb8.jpg    19",
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Unnamed: 0</th>\n      <th>IMG</th>\n      <th>CODE</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>14603</td>\n      <td>cd68269b-5a76-4eef-b66e-be4c6c1680ed.jpg</td>\n      <td>19</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>12346</td>\n      <td>a4c682c3-371c-4682-9008-37dbef03f020.jpg</td>\n      <td>16</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>12501</td>\n      <td>dc13f24f-8ab7-4d6e-b380-e6bd248343d4.jpg</td>\n      <td>16</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>13207</td>\n      <td>e1fa69ca-b9cf-4295-95b9-8ad565f1c02e.jpg</td>\n      <td>17</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>5170</td>\n      <td>a2214eb7-6b55-4545-8475-20d4d40475d4.jpg</td>\n      <td>6</td>\n    </tr>\n    <tr>\n      <th>5</th>\n      <td>15244</td>\n      <td>c32cf25e-32c9-494b-845b-9f1a7d1171e3.jpg</td>\n      <td>20</td>\n    </tr>\n    <tr>\n      <th>6</th>\n      <td>6495</td>\n      <td>97ac3076-e505-4169-9b17-2994c12a03cb.jpg</td>\n      <td>8</td>\n    </tr>\n    <tr>\n      <th>7</th>\n      <td>9512</td>\n      <td>8f044a0e-8922-4abe-af5b-e66fec843d04.jpg</td>\n      <td>12</td>\n    </tr>\n    <tr>\n      <th>8</th>\n      <td>5913</td>\n      <td>bc8ae91f-c716-49a2-b61b-d7a7b52e3738.jpg</td>\n      <td>7</td>\n    </tr>\n    <tr>\n      <th>9</th>\n      <td>14551</td>\n      <td>ba3081e9-f323-4746-a55f-2b17b7c78bb8.jpg</td>\n      <td>19</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -164,13 +176,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 14,
    "id": "efd1878acf889169",
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-02-01T13:17:15.762136700Z",
-     "start_time": "2024-02-01T13:17:15.751018800Z"
+     "end_time": "2024-02-02T21:00:40.291537100Z",
+     "start_time": "2024-02-02T21:00:40.270900900Z"
     }
    },
    "outputs": [],
@@ -325,7 +337,7 @@
     }
    ],
    "source": [
-    "sketch_model = SketchClassificatorModel(train_data, '0.2.2')\n",
+    "sketch_model = SketchClassificatorModel(train_data, '0.2.5')\n",
     "sketch_model.build_model()\n",
     "sketch_model.train()\n",
     "sketch_model.save()\n",
@@ -450,23 +462,17 @@
     "model.fit(train_data.images, train_data.labels, epochs=5, batch_size=64, validation_data=(test_data.images, test_data.labels))"
    ],
    "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "start_time": "2024-02-01T01:23:26.821258300Z"
-    }
+    "collapsed": false
    },
    "id": "105f6d0dae462005",
-   "execution_count": null
+   "execution_count": 0
   },
   {
    "cell_type": "code",
    "outputs": [],
    "source": [],
    "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "start_time": "2024-02-01T01:23:26.822386Z"
-    }
+    "collapsed": false
    },
    "id": "19d99d3df3f37b04"
   }
